@@ -67,6 +67,7 @@ AC_CONFIG_FILES([Makefile
                  sh-tools/mirror.sh
                  sh-tools/yesterday.sh
                  pl-tools/gzip.pl
+                 pl-tools/crypt.pl
                  pl-tools/mirror.pl
                  ])
 AC_CONFIG_HEADER([config.h])
