@@ -72,7 +72,7 @@ the rdup-util scripts can be found.
 .TP
 .B \-k keyfile
 Encrypt the files while backing up with \fIkeyfile\fR. This option
-inserts \fBcrypt.sh keyfile\fR in the pipeline. If both \fI-z\fR and
+inserts \fBcrypt.pl keyfile\fR in the pipeline. If both \fI-z\fR and
 \fI-k\fR are given a file is first zipped and then encrypted.
 .TP
 .B -l num
